# pyPTA

./: .gitignore  .gitmodules  CMakeLists.txt  ENV.yml  LICENSE  README.md  environment.yml  meta.yaml  old.txt  pyPTA-0.0.1-py3-none-any.whl  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  setup2.py
.github/workflows/: tests.yml  tests_cpp.yml
src/: conftest.py  module.cpp
src/cpp/: .gitignore  .gitmodules  CMakeLists.txt  pypta.code-workspace
src/cpp/src/: adsorption_potentials.cpp  data_classes.h  pta_helper.cpp  pta_helper.h  pta_mixture.cpp  pta_mixture.h  pta_pure.cpp  pta_pure.h  pta_solver.cpp  pta_solver.h
src/cpp/src/_test/: CMakeLists.txt  test_loadings.cpp  test_pta_pure.cpp
src/cpp/src/equations_of_state/: eos.h  eos_helper.cpp  eos_helper.h  pr77.cpp  pr77.h  pr77_peneloux.cpp  pr77_peneloux.h  srk.cpp  srk.h  srk_peneloux.h
src/cpp/src/optimization_algorithms/: bisection.h  brent.cpp  brent.h
src/cpp/tests/: CMakeLists.txt  test_loadings.cpp  test_logic.cpp  test_pta_mixture.cpp  test_pta_pure.cpp
src/database/: database.db  db_setup.py  models.py
src/models/: fluid.py  fluid_model.py  fluid_storage.py  isotherm_model.py  mono_component.py  pure_isotherm.py  units.py
src/models/tests/: test_fluid.py  test_fluid_model.py  test_isotherm_model.py  test_pure_isotherm.py  test_storage_fluid_data.py
src/models/tests/test_pure_isotherm/: test_data.csv  test_data.xlsx
src/models/tests/test_storage_fluid_data/: fluids.csv  fluidsxlsx.xlsx
src/pyPTA/: fluid_models.py  isotherm_models.py
src/pyPTA/cpp/: CMakeLists.txt  module.cpp
src/pyPTA/cpp/src/: adsorption_potentials.h  base_pta.h  data_classes.h  pta_helper.cpp  pta_mixture.cpp  pta_mixture.h  pta_pure.cpp  pta_pure.h  pta_solver.cpp  pta_solver.h
src/pyPTA/cpp/src/_test/: CMakeLists.txt  test_loadings.cpp  test_logic.cpp  test_pta_mixture  test_pta_mixture.cpp  test_pta_pure.cpp
src/pyPTA/cpp/src/equations_of_state/: eos_helper.cpp  eos_helper.h  pr77.h
src/pyPTA/cpp/src/optimization_algorithms/: BISECTION.h  FMIN.h  brent.cpp  brent.h
src/pyPTA/cpp_files/: module.cpp
src/pyPTA/cpp_files/src/: ADSORPTION_POTENTIAL_FUNCTIONS.h  BISECTION.h  BRENT.h  FMIN.h  GETBOUNDARIES.h  GLOBAL_FUNCTIONS.h  MIX_FUNCTIONS.h  adsorption_potentials.h  base_pta.h  constants.h  data_classes.h  eos_helper.h  global_helper.h  nelder_mead.h  pr77.h  pta_helper.h  pta_pure.h
src/pyPTA/cpp_files/src/_test/: test_loadings  test_logic  test_pta_mixture.cpp  test_pta_pure  test_pta_pure.cpp  test_pta_pure_multiple  test_pta_pure_multiple.cpp
src/pyPTA/python/: pta_models.py
tests/: test_cpta.py  test_data_classes.py  test_fluid.py  test_mixture_pta.py  test_pure_isotherm.py  test_pure_pta.py
tests/test_pure_isotherm/: test_data.txt
tests/test_storage_fluid_data/: fluids.csv
