[metadata]
name = pypta
description = A python package to calculate PTA mono- and muilticomponent data.
author = Marcus Pereira
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[build_ext]
inplace=1

[options]
packages =
    pypta
install_requires =
	numpy>=1.17.3
	scipy>=1.5.4
	attrs>=19.1.0
	attrs_strict==0.2.2
	pybind11>=2.6.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
	pybind11>=2.6.0


[options.package_data]
pyPTA = py.typed

[flake8]
ignore = 
	E402,
	W503,
	W504,
	E126
max-line-length = 140
exclude = .tox,.eggs,ci/templates,build,dist


[tool:pytest]
testpaths = 
	tests
norecursedirs = 
	.git
	.tox
	.env
	dist
	build
	migrations
python_files = 
	test_*.py
	*_test.py
	tests.py
addopts = 
	-ra
	--ignore=docs/conf.py
	--ignore=setup.py
	--ignore=ci
	--ignore=examples
	--ignore=.eggs
	--doctest-modules
	--doctest-glob=\*.rst
	--tb=short
markers = 
	core: core pygaps python functionality.
	characterisation: characterisation tests on isotherms.
	modelling: model generation from isotherms.
	graphing: plotting functionality testing.
	parsing: parsing functionality testing.
	okay: custom emtpy marker.
filterwarnings = 
	ignore::UserWarning

[coverage]
show_missing = true
precision = 2
omit = *migrations*

[coverage:paths]
source = 
	src
	*/site-packages

[coverage:run]
branch = False
source = 
	src
omit = 
	*/tests/*
parallel = true

[coverage:report]
exclude_lines = 
	pragma: no cover
	
	def __repr__
	if self\.debug
	
	raise AssertionError
	raise NotImplementedError
	
	if 0:
	if __name__ == .__main__.:

[pylint]
extension-pkg-whitelist = numpy, scipy, pandas


[pydocstyle]
convention = numpy
match-dir = 'src\/.*'

[tool:isort]
force_single_line = True
line_length = 120
known_first_party = pypta
default_section = THIRDPARTY
forced_separate = test_pypta
skip = .tox,.eggs,ci/templates,build,dist

[yapf]
based_on_style = pep8
dedent_closing_brackets = true
coalesce_brackets = true
split_complex_comprehension = true
split_before_dot = true